--- a/infrastructure/k8s/postgres/service.yaml
+++ b/infrastructure/k8s/postgres/service.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: data-platform
 spec:
-  type: ClusterIP
   ports:
   - port: 5432
+    protocol: TCP
     targetPort: 5432
   selector:
     app: postgres
+  type: ClusterIP
